# logcenter_sdk

./: .gitignore  README.md  log_sender.py  openapi.json  requirements.txt
Assets/: UniversalRenderPipelineGlobalSettings.asset
Assets/Scenes/: SampleScene.unity
Assets/Script/: PackageAutoInstaller.cs  teste.cs
Assets/StreamingAssets/: config.ini  datalog.json
ProjectSettings/: ProjectSettings.asset
c/: platformio.ini
c/src/: LogCenterConfig.h  LogCenterSender.cpp  LogCenterSender.h  Spool.cpp  Spool.h  config-example.h  main.cpp
javascript/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
javascript/src/: client.ts  config.ts  express.ts  sender.ts  spool.ts
javascript/src/middleware/: express.ts
log_center_sdk/: log_sender.py
python/: README.md  openapi.json  pyproject.toml  requirements.txt
python/log_center_sdk/: __init__.py  client.py  config.py
python/logcenter_sdk/: config.py  exceptions.py  middleware.py  sender.py  spool.py
unity/Assets/Scenes/: SampleScene.unity
unity/ProjectSettings/: ProjectSettings.asset
