[build-system]
requires = ["setuptools>=66.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logcenter-sdk"
version = "0.1.6.dev0"
description = "SDK oficial para envio de logs ao LogCenter"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name="DreamBricks", email="projetos@dreambricks.com.br" }
]

dependencies = [
  "httpx>=0.24.0",
  "pydantic>=2.0.0",
  "python-dotenv==1.1.1"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/dreambricks/logcenter_sdk"
